Cambios finales y pruebas que andan